--- a/MobileAcademy1/app/src/main/res/values/strings.xml
+++ b/MobileAcademy1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileAcademy1</string>
+    <string name="message_placeholder_text">Hello, %s!</string>
+    <string name="source_hint_text">Enter your name</string>
+    <string name="say_hi_message">Say Hi!</string>
 </resources>
