Added extension Activities for Course 2 Homework (List Views)
Content:
	- List View of Quotes (retrieved using the same API as in earlier versions)
	- Asynchronous parsing and loading of the list's items (using AsynkTask and interfaces for callback updating)
	- Navigation to a single Quote Details Screen

Following up / TODOs:
	- Improvements on the list item layouts
	- Switcher button to change between ListView - GridView layouts

--- a/MobileAcademy2/app/src/main/res/values/strings.xml
+++ b/MobileAcademy2/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">MobileAcademy2</string>
     <string name="random_quote_text">Your random quote:\n%s</string>
     <string name="get_quote_button_text">Get Random Quote</string>
+    <string name="go_to_collection_button_text">Go to Quotes Collection</string>
+    <string name="loading_quotes_text">Loading quotes...\nPlease wait</string>
     <string-array name="quotes">
         <item></item>
         <item></item>
