Added Grid / List View toggle menu item and separated the creation of the CustomTextViews according to the containing parent

--- a/MobileAcademy2/app/src/main/res/values/strings.xml
+++ b/MobileAcademy2/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="get_quote_button_text">Get Random Quote</string>
     <string name="go_to_collection_button_text">Go to Quotes Collection</string>
     <string name="loading_quotes_text">Loading quotes...\nPlease wait</string>
+    <string name="toggle_grid_list_view">Toggle Grid / List View</string>
     <string-array name="quotes">
         <item></item>
         <item></item>
