Added Search action for the MainActivity
Also completed the ArticleDetailsActivity and enabled the user to quickly navigate to the article's full content using the default browser.

Upcoming updates:
	- Enable the user to select various criterias for the news relevance
	- Enable the user to search for additional articles if no results have been returned by the SearchView
	- Maybe enable the user to toggle between grid and list layouts
	- Integrating an SQLite Database for storing the user's saved articles
	- Integrate the Facebook API for sharing articles on the user's wall

--- a/MobileAcademy3/app/src/main/res/values/strings.xml
+++ b/MobileAcademy3/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="placeholder_date_text">MMM-dd</string>
     <string name="placeholder_title_text">Title placeholder</string>
     <string name="refresh_menu_item_text">Refresh</string>
+    <string name="go_to_full_article_text">Read the full article here.</string>
+    <string name="search_icon_text">Search articles</string>
 </resources>
